ECCI-229: Fixes issue of buttons wrapping under main cookie message

--- a/themes/custom/essex/css/overrides.css
+++ b/themes/custom/essex/css/overrides.css
@@ -581,6 +581,7 @@ tbody tr {
 @media only screen and (min-width: 768px) {
     .cookies-notice .row {
         display: flex;
+        flex-wrap: nowrap;
     }
 }
 
